[package]
name = "pynit"
version = "0.1.1"
edition = "2021"
authors = ["Antoine Langlois <antoine.l@antoine-langlois.net>"]
license = "GPL-3.0-or-later"
description = "Small CLI tool to initialize a python project"
homepage = "https://gitea.antoine-langlois.net/DataHearth/pynit"
repository = "https://gitea.antoine-langlois.net/DataHearth/pynit"
keywords = ["automation", "CLI"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
